--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
     <properties>
         <sonar.projectKey>TEST</sonar.projectKey>
         <sonar.host.url>http://192.168.1.69:9000/</sonar.host.url>
+        <sonar.login>votre token</sonar.login>
     </properties>
 </project>
